# oca-data-protection

./: README.md
privacy/: README.rst
privacy/static/description/: index.html
privacy_consent/: README.rst
privacy_consent/static/description/: index.html
privacy_partner_to_be_forgotten/: README.rst  __init__.py  __manifest__.py
privacy_partner_to_be_forgotten/demo/: demo_partner_anonymize_data.xml
privacy_partner_to_be_forgotten/models/: __init__.py  res_partner.py
privacy_partner_to_be_forgotten/security/: security.xml
privacy_partner_to_be_forgotten/static/description/: index.html
privacy_partner_to_be_forgotten/tests/: __init__.py  test_partner_anonymize.py
privacy_partner_to_be_forgotten/views/: res_partner_views.xml
privacy_partner_to_be_forgotten/wizards/: __init__.py  partner_anonymize_wizard.py  partner_anonymize_wizard_views.xml
setup/_metapackage/: pyproject.toml
