[project]
name = "odoo-addons-oca-data-protection"
version = "17.0.20250609.0"
dependencies = [
    "odoo-addon-privacy>=17.0dev,<17.1dev",
    "odoo-addon-privacy_consent>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
